--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
+		"start:migrate:prod": "prisma migrate deploy && npm run start:prod",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
