--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
 	"scripts": {
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-		"start": "nest start",
 		"start:migrate:prod": "prisma migrate deploy && npm run start:prod",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
+		"start:prod": "node dist/src/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -20,7 +19,8 @@
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./test/jest-e2e.json",
 		"prettier": "npx prettier src --check",
-		"prettier:fix": "npm run prettier -- --write"
+		"prettier:fix": "npm run prettier -- --write",
+		"clean": "rm -rf dist && rm -rf build && rm -rf node_modules && rm -f package-lock.json && rm -f yarn.lock && rm -f pnpm-lock.yaml"
 	},
 	"dependencies": {
 		"@nestjs/common": "^10.0.0",
